Replace hardcoded file path with variable 'path'

--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_original = pd.read_csv(r'C:\\Users\\rapha\\OneDrive\\Documentos\\Programação + Cursos\\IEEE\\creditcard.csv')"
+    "base_original = pd.read_csv(path)"
    ]
   },
   {
